--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "flowbite-datepicker": "^1.2.2",
         "jquery": "^3.6.4",
         "toastify-js": "^1.12.0"
     }
