--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "flowbite-datepicker": "^1.2.2",
+        "froala-editor": "^4.0.18",
         "jquery": "^3.6.4",
         "toastify-js": "^1.12.0"
     }
