--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
+        "laravel/scout": "^10.1",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.12",
-        "pragmarx/google2fa": "^8.0"
+        "pragmarx/google2fa": "^8.0",
+        "teamtnt/laravel-scout-tntsearch-driver": "^12.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
