--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     },
     "autoload": {
         "files": [
-            "app/helpers.php"
+          "app/Helper/helpers.php"
         ],
         "psr-4": {
             "App\\": "app/",
