Upgraded to aplinejs, automaticly dedect froala editors on add

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "alpinejs": "^3.12.0",
         "flowbite-datepicker": "^1.2.2",
         "froala-editor": "^4.0.18",
         "jquery": "^3.6.4",
