--- a/resources/views/components/goal.yaml
+++ b/resources/views/components/goal.yaml
@@ -17,8 +17,6 @@
 #Slots[...]: Indicates that the component has slots
 
 components:
-  - dropdown:
-      - x #Styled #Props[title: ?, sr-info: ?] #Slots[button, slot]
   - form:
       - alerts:
           - rate-limit #Modeled #Props[action: ?; error: false, ?; poll: null, ?]
@@ -71,3 +69,5 @@ done:
       - x #Styled #Outlined #Props[type: button, submit, reset; label: ?] #Slots[slot]
   - card:
       - x #Styled #Props[title: ?, sr-info: ?] #Slots[slot]
+  - dropdown:
+      - x #Slots[button, slot]
