--- a/resources/views/components/goal.yaml
+++ b/resources/views/components/goal.yaml
@@ -19,7 +19,7 @@
 components:
   - form:
       - alerts:
-          - rate-limit #Modeled #Props[action: ?; error: false, ?; poll: null, ?]
+          - rate-limit #Props[action: ?; error: false, ?; poll: null, ?, from: value, alpinejs, message; value: ?]
       - input:
           - checkbox #Modeled #Updateable #MultipleErrors #Props[id: ?] #Slot[slot]
           - color #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?]
