--- a/resources/views/components/goal.yaml
+++ b/resources/views/components/goal.yaml
@@ -42,7 +42,7 @@ components:
 #      - alerts:
 #          - rate-limit #Props[action: ?; error: false, ?; poll: null, ?, from: value, alpinejs, message; value: ?]
       - input:
-          - checkbox #Modeled #Updateable #MultipleErrors #Props[id: ?] #Slot[slot]
+#          - checkbox #Modeled #Updateable #MultipleErrors #Props[id: ?] #Slot[slot]
           - color #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?]
           - date #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?]
           - file #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?; type: input, dropzone; multiple: true, false; accept: */*, ?]
