--- a/resources/views/components/goal.yaml
+++ b/resources/views/components/goal.yaml
@@ -43,7 +43,7 @@ components:
 #          - rate-limit #Props[action: ?; error: false, ?; poll: null, ?, from: value, alpinejs, message; value: ?]
       - input:
 #          - checkbox #Modeled #Updateable #MultipleErrors #Props[id: ?] #Slot[slot]
-          - color #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?]
+          - color #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?, theme: monolith, classic, nano; opacity: false, true]
           - date #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?]
           - file #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?; type: input, dropzone; multiple: true, false; accept: */*, ?]
           - hidden #Modeled #Props[id: ?]
