Added file input

--- a/resources/views/components/goal.yaml
+++ b/resources/views/components/goal.yaml
@@ -45,7 +45,7 @@ components:
 #          - checkbox #Modeled #Updateable #MultipleErrors #Props[id: ?] #Slot[slot]
 #          - color #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?, theme: monolith, classic, nano; opacity: false, true]
           - date #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?]
-          - file #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?; type: input, dropzone; multiple: true, false; accept: */*, ?]
+#          - file #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?; multiple: true, false; accept: */*, ?]
 #          - hidden #Modeled #Props[id: ?]
           - password #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?; indicated: true, false]
           - textarea #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?; wysiwyg: true, false; rows: ?]
