--- a/resources/views/components/goal.yaml
+++ b/resources/views/components/goal.yaml
@@ -47,7 +47,7 @@ components:
           - date #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?]
 #          - file #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?; multiple: true, false; accept: */*, ?]
 #          - hidden #Modeled #Props[id: ?]
-          - password #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?; indicated: true, false]
+#          - password #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?; indicated: true, false]
           - textarea #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?; wysiwyg: true, false; rows: ?]
           - time #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?]
 #          - x #Modeled #Updateable #MultipleErrors #Props[id: ?; label: ?; type: text, number, email]
