--- a/resources/views/components/goal.yaml
+++ b/resources/views/components/goal.yaml
@@ -53,14 +53,14 @@ components:
 #  - modal:
 #      - x #Props[id: ?; title: ?, sr-info: ?; close-button: true, false, max-width: lg, xs, sm, md, xl, 2xl] #Slots[slot, footer]
 #      - confirm #Props[id: ?; title: ?, sr-info: ?; close-button: true, false, max-width: lg, xs, sm, md, xl, 2xl] #Slots[slot, footer]
-  - table:
-      - body:
-          - cell #Props[colspan: 1, ?; rowspan: 1, ?; header: true, false] #Slots[slot]
-          - row #Props[hover: true, false; stripe: true, false; border: true, false] #Slots[slot]
-      - header:
-          - sr #Props[name: ?]
-          - simple #Props[name: ?]
-          - sortable #Props[name: ?; current-field: ?; current-direction: asc, desc; field: ?]
-      - x #Props[search: false, true; pagination: false, ?]
+#  - table:
+#      - body:
+#          - cell #Props[colspan: 1, ?; rowspan: 1, ?; header: true, false] #Slots[slot]
+#          - row #Props[hover: true, false; stripe: true, false; border: true, false] #Slots[slot]
+#      - header:
+#          - sr #Props[name: ?]
+#          - simple #Props[name: ?]
+#          - sortable #Props[name: ?; current-field: ?; current-direction: asc, desc; field: ?]
+#      - x #Props[search: false, true; pagination: false, ?] #Slots[slot, header]
 #  - overlay:
 #      - x #Slots[overlay, slot]
