--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.12",
         "pragmarx/google2fa": "^8.0",
-        "teamtnt/laravel-scout-tntsearch-driver": "^12.4"
+        "teamtnt/laravel-scout-tntsearch-driver": "^12.4",
+        "ext-zip": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
